--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
     "antd": "^5.27.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
@@ -18,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
