--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.27.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "emailjs-com": "^3.2.0",
     "notistack": "^3.0.2",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
