--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL=https://localhost:7275/api
 VITE_API_AUTH_URL=https://localhost:7275/api/auth
+VITE_API_GOOGLE_MAPS_KEY=AIzaSyCOn8pOETJVrjw1bcgxRunW89TF1XFMwOI
