--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
+    "@react-google-maps/api": "^2.20.7",
     "antd": "^5.27.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "lucide-react": "^0.542.0",
-    "emailjs-com": "^3.2.0",
     "dayjs": "^1.11.18",
+    "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.542.0",
     "notistack": "^3.0.2",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
