--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "antd": "^5.27.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "lucide-react": "^0.542.0",
-    "emailjs-com": "^3.2.0",
     "dayjs": "^1.11.18",
+    "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.542.0",
     "notistack": "^3.0.2",
     "postcss": "^8.5.6",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
