--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
     "@react-google-maps/api": "^2.20.7",
-    "antd": "^5.27.1",
+    "antd": "^5.27.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "emailjs-com": "^3.2.0",
     "lucide-react": "^0.542.0",
@@ -33,6 +34,7 @@
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2"
